--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ uvicorn[standard]>=0.25.0,<1.0.0
 requests>=2.32.0,<3.0.0
 beautifulsoup4>=4.12.0,<5.0.0
 scipy>=1.11.0,<2.0.0
+pymongo>=4.6.0,<5.0.0
