--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ uvicorn[standard]>=0.25.0,<1.0.0
 requests>=2.32.0,<3.0.0
 beautifulsoup4>=4.12.0,<5.0.0
 scipy>=1.11.0,<2.0.0
-pymongo>=4.6.0,<5.0.0
+SQLAlchemy>=2.0.0,<3.0.0
+pymysql>=1.1.0,<2.0.0
 passlib[bcrypt]>=1.7.4,<2.0.0
 bcrypt>=3.2.0,<4.0.0
 PyJWT>=2.8.0,<3.0.0
